--- a/ByteCore.Web/packages.config
+++ b/ByteCore.Web/packages.config
@@ -1,8 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
+  <package id="Microsoft.AspNet.Mvc.ru" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net481" />
+  <package id="Microsoft.AspNet.Razor.ru" version="3.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net481" />
+  <package id="Microsoft.AspNet.WebPages.ru" version="3.2.9" targetFramework="net481" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.3.0" targetFramework="net481" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.3.0" targetFramework="net481" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.3.0" targetFramework="net481" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.3.0" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net481" />
+  <package id="Microsoft.Net.Http.Headers" version="2.3.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net481" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net481" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net481" />
 </packages>
