--- a/ByteCore.Web/Views/web.config
+++ b/ByteCore.Web/Views/web.config
@@ -38,5 +38,9 @@
         <add assembly="System.Web.Mvc, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
+
+    <customErrors mode="On">
+      <error statusCode="404" redirect="/Error/NotFound" />
+    </customErrors>
   </system.web>
 </configuration>
