Implement custom error handling for 404 errors and update web.config

--- a/ByteCore.Web/Web.config
+++ b/ByteCore.Web/Web.config
@@ -11,14 +11,6 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <!--
-    Описание изменений web.config см. по адресу http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    Следующие атрибуты можно установить с помощью тега <httpRuntime>.
-      <system.Web>
-        <httpRuntime targetFramework="4.8" />
-      </system.Web>
-  -->
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
@@ -32,9 +24,14 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" path="/Error/404" responseMode="ExecuteURL" />
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
