Add Chapter and Section models, update Courses and Chapters controllers, and enhance course views

--- a/ByteCore.Web/ByteCore.Web.csproj
+++ b/ByteCore.Web/ByteCore.Web.csproj
@@ -96,6 +96,8 @@
     <Content Include="Views\Account\Dashboard.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
+    <Content Include="Views\Chapter\Index.cshtml" />
+    <Content Include="Views\Courses\CourseEnrolled.cshtml" />
     <Content Include="Views\Privacy\Index.cshtml" />
     <Content Include="Views\Terms\Index.cshtml" />
     <Content Include="Views\Shared\_EnrollButton.cshtml" />
@@ -104,6 +106,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ChapterController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -113,9 +116,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ChapterModel.cs" />
     <Compile Include="Models\CourseRoadmapModel.cs" />
     <Compile Include="Models\ContactFormModel.cs" />
     <Compile Include="Models\CourseModel.cs" />
+    <Compile Include="Models\SectionModel.cs" />
     <Compile Include="Models\UserCourseModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -133,7 +138,7 @@
     <Content Include="Views\Account\Registration.cshtml" />
     <Content Include="Views\Courses\Index.cshtml" />
     <Content Include="Views\Courses\Overview.cshtml" />
-    <Content Include="Views\Courses\Course.cshtml" />
+    <Content Include="Views\Courses\CourseUnenrolled.cshtml" />
     <Content Include="Views\AboutUs\Index.cshtml" />
     <Content Include="Views\Courses\Roadmap.cshtml" />
     <None Include="Web.Debug.config">
