--- a/ByteCore.Web/Web.Release.config
+++ b/ByteCore.Web/Web.Release.config
@@ -27,5 +27,9 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" path="/Error/404" responseMode="ExecuteURL" />
+    </httpErrors>
   </system.web>
 </configuration>
