--- a/ByteCore.Web/ByteCore.Web.csproj
+++ b/ByteCore.Web/ByteCore.Web.csproj
@@ -118,6 +118,7 @@
     <Content Include="Views\Chapter\Index.cshtml" />
     <Content Include="Views\Courses\CourseEnrolled.cshtml" />
     <Content Include="Views\Privacy\Index.cshtml" />
+    <Content Include="Views\Quizzes\Create.cshtml" />
     <Content Include="Views\Terms\Index.cshtml" />
     <Content Include="Views\Shared\_EnrollButton.cshtml" />
     <Content Include="Web.config" />
@@ -150,8 +151,18 @@
     <Compile Include="Migrations\202503111927370_Change_Course_Model.Designer.cs">
       <DependentUpon>202503111927370_Change_Course_Model.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503112106574_Change_Quiz_Model.cs" />
+    <Compile Include="Migrations\202503112106574_Change_Quiz_Model.Designer.cs">
+      <DependentUpon>202503112106574_Change_Quiz_Model.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503112122131_Add_Question_Options.cs" />
+    <Compile Include="Migrations\202503112122131_Add_Question_Options.Designer.cs">
+      <DependentUpon>202503112122131_Add_Question_Options.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\QuestionModel.cs" />
+    <Compile Include="Models\QuestionOptionModel.cs" />
+    <Compile Include="Models\QuizResultAnswerModel.cs" />
     <Compile Include="Models\QuizResultModel.cs" />
     <Compile Include="Models\QuizModel.cs" />
     <Compile Include="Models\ChapterModel.cs" />
@@ -163,8 +174,10 @@
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IPasswordService.cs" />
+    <Compile Include="Services\IQuizzesService.cs" />
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\PasswordService.cs" />
+    <Compile Include="Services\QuizzesService.cs" />
     <Compile Include="Services\UserService.cs" />
     <None Include="Views\Quizzes\Result.cshtml" />
     <None Include="Views\Quizzes\Quiz.cshtml" />
@@ -205,6 +218,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503111927370_Change_Course_Model.resx">
       <DependentUpon>202503111927370_Change_Course_Model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503112106574_Change_Quiz_Model.resx">
+      <DependentUpon>202503112106574_Change_Quiz_Model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503112122131_Add_Question_Options.resx">
+      <DependentUpon>202503112122131_Add_Question_Options.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
