Add quiz editing functionality

--- a/ByteCore.Web/packages.config
+++ b/ByteCore.Web/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net481" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.9" targetFramework="net481" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNetCore.Cryptography.Internal" version="9.0.3" targetFramework="net481" />
@@ -16,6 +18,7 @@
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net481" />
   <package id="Microsoft.Net.Http.Headers" version="2.3.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net481" />
   <package id="System.Memory" version="4.5.5" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
@@ -23,4 +26,5 @@
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net481" />
   <package id="Unity" version="5.11.10" targetFramework="net481" />
   <package id="Unity.Mvc5" version="1.4.0" targetFramework="net481" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net481" />
 </packages>
