--- a/ByteCore.Web/ByteCore.Web.csproj
+++ b/ByteCore.Web/ByteCore.Web.csproj
@@ -129,6 +129,7 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Chapter\Index.cshtml" />
     <Content Include="Views\Courses\CourseEnrolled.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
     <Content Include="Views\Privacy\Index.cshtml" />
     <Content Include="Views\Quizzes\Create.cshtml" />
     <Content Include="Views\Quizzes\Edit.cshtml" />
@@ -172,6 +173,14 @@
     <Compile Include="Migrations\202503112122131_Add_Question_Options.Designer.cs">
       <DependentUpon>202503112122131_Add_Question_Options.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503121008013_Add_Course_EnrolledUsers.cs" />
+    <Compile Include="Migrations\202503121008013_Add_Course_EnrolledUsers.Designer.cs">
+      <DependentUpon>202503121008013_Add_Course_EnrolledUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503121049409_Change_Chapter_Model.cs" />
+    <Compile Include="Migrations\202503121049409_Change_Chapter_Model.Designer.cs">
+      <DependentUpon>202503121049409_Change_Chapter_Model.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Models\QuestionOptionModel.cs" />
@@ -186,6 +195,8 @@
     <Compile Include="Models\UserCourseModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CoursesService.cs" />
+    <Compile Include="Services\ICoursesService.cs" />
     <Compile Include="Services\IPasswordService.cs" />
     <Compile Include="Services\IQuizzesService.cs" />
     <Compile Include="Services\IUserService.cs" />
@@ -237,6 +248,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503112122131_Add_Question_Options.resx">
       <DependentUpon>202503112122131_Add_Question_Options.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503121008013_Add_Course_EnrolledUsers.resx">
+      <DependentUpon>202503121008013_Add_Course_EnrolledUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503121049409_Change_Chapter_Model.resx">
+      <DependentUpon>202503121049409_Change_Chapter_Model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
