--- a/ByteCore.Helpers/ByteCore.Helpers.csproj
+++ b/ByteCore.Helpers/ByteCore.Helpers.csproj
@@ -39,6 +39,7 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="CookieGenerator.cs" />
         <Compile Include="PasswordHasher.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
