--- a/ByteCore.Web/Web.Release.config
+++ b/ByteCore.Web/Web.Release.config
@@ -30,6 +30,8 @@
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <remove statusCode="404" subStatusCode="-1" />
       <error statusCode="404" path="/Error/404" responseMode="ExecuteURL" />
+      <remove statusCode="403" subStatusCode="-1" />
+      <error statusCode="403" path="/Error/403" responseMode="ExecuteURL" />
     </httpErrors>
   </system.web>
 </configuration>
