fixed some issues

--- a/ByteCore.BusinessLogic/App.config
+++ b/ByteCore.BusinessLogic/App.config
@@ -39,4 +39,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Server=localhost,1433;Database=ByteCore;User Id=sa;Password=yourStrong(!)Password;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
