--- a/ByteCore.Web/Web.config
+++ b/ByteCore.Web/Web.config
@@ -10,6 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="WeatherCity" value="Chisinau" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
