--- a/ByteCore.Domain/ByteCore.Domain.csproj
+++ b/ByteCore.Domain/ByteCore.Domain.csproj
@@ -53,6 +53,8 @@
         <Compile Include="QuizScope\Quiz.cs" />
         <Compile Include="QuizScope\QuizResultAnswer.cs" />
         <Compile Include="QuizScope\QuizResult.cs" />
+        <Compile Include="UserScope\AuditLog.cs" />
+        <Compile Include="UserScope\LoginLog.cs" />
         <Compile Include="UserScope\UserCourse.cs" />
         <Compile Include="UserScope\User.cs" />
         <Compile Include="UserScope\UserSession.cs" />
